src/app/components/home/home.component.css
@import url("https://fonts.googleapis.com/css?family=Lora:400,400i|Open+Sans:300,400,600,700,800");

/* XSmall */
@media (max-width: 575px) {
    .feature-img {
        object-fit: contain;
        width     : auto;
        height    : 100%;
    }

    h1,
    h2 {
        font-size    : 4.5vw;
        line-height  : 6vw;
        margin-bottom: 2.5vw;
    }

    h3 {
        margin-top: 5vw;
        font-size : 2.5vw;
        padding   : 0;
    }

    a.btn-google {
        /* padding         : 15px 16px 5px 40px; */
        padding: 3vw 3vw 1vw 8vw;
    }

    a.btn-google:after {
        top      : 1vw;
        left     : 8.3vw;
        font-size: 2vw;
    }

    a.btn-google:before {
        width : 6vw;
        height: 6vw;
        left  : 1vw;
        top   : 18px;
    }

    div.bg-white {
        padding: 3vw 8vw;
    }

    .col-1 {
        padding: 0;
    }

    .h-img-holder {
        padding : 0;
        position: relative;
        width   : 100%;
        height  : 13vw;
    }

    img.highlight-section-arrow {
        right: 3vw;
        width: 5vw;
    }

    img.highlight-section-1 {
        width: 16vw;
    }

    img.highlight-section-2 {
        width: 14vw;
    }

    img.highlight-section-3 {
        width: 24vw;
        top  : 4vw;
    }

    a.btn {
        font-size: 3vw;
    }

    .btn-rounded-icon.btn {
        padding: 2vw 8vw;
    }

    p {
        font-size     : 3vw;
        letter-spacing: 0;
        line-height   : 3vw;
        color         : #808080;
        margin-bottom : 2.5vw;
    }

    .container {
        padding      : 0px 3%;
        margin       : 0px 3%;
        max-width    : 90%;
        /* overflow-x: hidden;
        overflow-y   : visible; */
    }
}

/* Small */
@media (min-width: 576px) and (max-width: 767px) {
    .feature-img {
        object-fit: contain;
        width     : auto;
        height    : 100%;
    }

    h1,
    h2 {
        font-size  : 28px;
        line-height: 38px;
    }

    h3 {
        font-size: 15px;
    }

    .h-img-holder {
        padding : 0;
        position: relative;
        width   : 100%;
        height  : 7em;
    }

    img.highlight-section-arrow {
        width: 5vw;
    }

    img.highlight-section-1 {
        width: 16vw;
    }

    img.highlight-section-2 {
        width: 14vw;
    }

    img.highlight-section-3 {
        width: 24vw;
        top  : 4vw;
    }

    .btn-rounded-icon {
        padding: 3vw 5vw;
    }

    a.btn {
        font-size: 18px;
    }

    p {
        font-size     : 18px;
        letter-spacing: 0;
        line-height   : 25px;
        color         : #808080;
        margin-bottom : 25px;
    }

    .container {
        padding      : 0px 0px;
        margin       : 0px 5%;
        max-width    : 90%;
        /* overflow-x: hidden;
        overflow-y   : visible; */
    }
}

/* Medium */
@media (min-width: 768px) and (max-width: 991px) {
    .feature-img {
        object-fit: contain;
        width     : 100%;
        height    : auto;
    }

    h1,
    h2 {
        font-size  : 33px;
        line-height: 40px;
    }

    a.btn {
        font-size: 18px;
    }

    h3 {
        font-size: 20px;
    }

    .h-img-holder {
        padding : 0;
        position: relative;
        width   : 100%;
        height  : 10em;
    }

    img.highlight-section-arrow {
        width: 5vw;
    }

    img.highlight-section-1 {
        width: 16vw;
    }

    img.highlight-section-2 {
        width: 14vw;
    }

    img.highlight-section-3 {
        width: 24vw;
        top  : 4vw;
    }

    p {
        font-size     : 20px;
        letter-spacing: 0;
        line-height   : 25px;
        color         : #808080;
        margin-bottom : 35px;
    }

    .container {
        padding  : 0px 0px;
        margin   : 0px 5%;
        max-width: 90%;
    }
}

/* Large */
@media (min-width: 992px) and (max-width: 1199px) {
    .feature-img {
        object-fit: contain;
        width     : 100%;
        height    : auto;
    }

    h1 {
        font-size  : 35px;
        line-height: 45px;
    }

    h2 {
        font-size  : 38px;
        line-height: 50px;
    }

    h3 {
        margin-top: 20px;
        font-size : 20px;
    }

    .h-img-holder {
        padding : 0;
        position: relative;
        width   : 100%;
        height  : 10em;
    }

    img.highlight-section-arrow {
        width: 3em;
    }

    img.highlight-section-1 {
        width: 10em;
    }

    img.highlight-section-2 {
        width: 9em;
    }

    img.highlight-section-3 {
        width: 14em;
        top  : 2em;
    }

    a.btn {
        font-size: 20px;
    }

    p {
        font-size     : 20px;
        letter-spacing: 0;
        line-height   : 25px;
        color         : #808080;
        margin-bottom : 35px;
    }

    .container {
        padding: 0px 30px;
    }
}

/* Extra Large */
@media (min-width: 1200px) and (max-width: 1399px) {
    .feature-img {
        object-fit: contain;
        width     : 100%;
        height    : auto;
    }

    h1 {
        font-size  : 35px;
        line-height: 45px;
    }

    h2 {
        font-size  : 38px;
        line-height: 50px;
    }

    h3 {
        margin-top: 20px;
        font-size : 20px;
    }

    .h-img-holder {
        padding : 0;
        position: relative;
        width   : 100%;
        height  : 10em;
    }

    img.highlight-section-arrow {
        width: 3em;
    }

    img.highlight-section-1 {
        width: 10em;
    }

    img.highlight-section-2 {
        width: 9em;
    }

    img.highlight-section-3 {
        width: 14em;
        top  : 2em;
    }

    a.btn {
        font-size: 22px;
    }

    p {
        font-size     : 20px;
        letter-spacing: 0;
        line-height   : 25px;
        color         : #808080;
        margin-bottom : 35px;
    }

    .container {
        padding: 0px 80px;
    }
}
/* ... */

